force-app/main/default/objects/custom_create187__c/custom_create187__c.object-meta.xml
<CustomObject>
    <label>Custom created object187</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects187</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>