force-app/main/default/objects/custom_create187__c/fields/custom_create_187field555__c.field-meta.xml
<CustomField>
    <fullName>custom_create_187field555__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 187field555</label>
    <type>Checkbox</type>
</CustomField>