force-app/main/default/objects/custom_create187__c/fields/custom_create_187field589__c.field-meta.xml
<CustomField>
    <fullName>custom_create_187field589__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 187field589</label>
    <type>Checkbox</type>
</CustomField>